--- a/css/scss/partials/_buttons.scss
+++ b/css/scss/partials/_buttons.scss
@@ -1,5 +1,12 @@
-// Submit button (used on canvas)
+/* *******
+** BUTTONS 
+** ******/
 
+// Depen
+.remove-button-style {
+    outline-style: none;
+    border: 0px;
+}
 .submit {    
     height: 60px;
     width: 150px;
@@ -13,36 +20,38 @@
     height: 30px;
     width: 100px;
 
-    background-color: $uq-purple!important;
     background-color: #FFF;
 
     &:hover {
-    	border: 2px solid #FFF;
-    	color: #FFF;
-    	transition: 0.4s;
+        border: 2px solid #FFF;
+        color: #FFF;
+        transition: 0.4s;
     }
 }
 
-.drawing-app-submit {
-	@extend .submit;
+// Add a subject as a lectruer
+.button-add-subject {
+    @extend .remove-button-style;
+    width: 100%;
+    border: 2px solid $uq-green;
+    background-color: white;
+    color: $uq-green;
+    font-weight: 600;
+    font-size: 20px;
+    height: 42px;
+    border-radius: 15px;
 
-	// Placement
-	position: absolute;
-	top: 10px;
-	right: 10px;
+    &:hover {
+        transition: 0.7s;
+        background-color: $uq-green;
+        color: white;
+    }
+
+    cursor: pointer;
 }
 
-.drawing-app-question {
-	@extend .submit;
-
-	// Placement
-	position: absolute;
-	top: 10px;
-	left: 10px;
-}
-
-// Lecturer go to prepare mode
-.button-goto-prepare {
+// Lecturer go to prepare mode (header button on right)
+.button-switch {
     background-color: $uq-purple;
     width: 150px;
     height: 100%;
@@ -60,3 +69,25 @@
         background-color: darken($uq-purple, 10%);
     }
 }
+
+
+
+.drawing-app-submit {
+	@extend .submit;
+    @extend .remove-button-style;
+
+	// Placement
+	position: absolute;
+	top: 10px;
+	right: 10px;
+}
+
+.drawing-app-question {
+	@extend .submit;
+
+	// Placement
+	position: absolute;
+	top: 10px;
+	left: 10px;
+}
+
