--- a/css/scss/partials/_list.scss
+++ b/css/scss/partials/_list.scss
@@ -2,12 +2,10 @@
 	margin-top: 20px;
 	width: 100%;
 
-	ul {
-		max-width: 400px;
-		margin: auto;
-	}
-
-	ul li {
+	max-width: 400px;
+	margin: auto;
+	
+	li {
 		color: white;
 		text-align: center;
 		height: 30px;
@@ -16,20 +14,8 @@
 		margin: 3px;
 		padding-top: 12px;
 		transition: .3s;
-	}
-
-	h2 {
-		text-align: center;
-		padding-top: 10px;
-		font-weight: 800;
-		font-size: 40px;
-	}
-
-	h3 {
-		text-align: center;
-		padding-top: 10px;
-		font-weight: 500;
-		padding-bottom: 10px;
+		cursor: pointer;
+		@extend .noselect;
 	}
 }
 
@@ -49,11 +35,11 @@
 .list-subjects-green {
 	@extend .list-subjects;
 
-	ul li {
+	li {
 		background: $uq-green;
 	}
 
-	ul li:hover {
+	li:hover {
 		background: darken($uq-green, 20%);
 	}
 }
