--- a/css/scss/partials/_headers.scss
+++ b/css/scss/partials/_headers.scss
@@ -53,6 +53,12 @@ $header-height: 50px;
 
 // Lecturer
 
+.header-l-subjects-header{
+	height: 50px;
+    width: 100%;
+    background: $uq-green;
+}
+
 .lecturer-startpage-header {
 	height: 173px;
     width: 100%;
