--- a/css/scss/partials/_theme.scss
+++ b/css/scss/partials/_theme.scss
@@ -11,11 +11,11 @@
 	transition: .5s;
 	
 	&:hover {
-		opacity: .9;
+		opacity: .8;
 	}
 }
 
-.lecture-start{
+.theme-lecture-start{
 a {
 		 text-decoration: none;
 	}
@@ -30,7 +30,7 @@ a {
 	transition: .3s;
 
 	&:hover {
-		opacity: .9;
+		opacity: .8;
 	}
 }
 
