added lecutre-questions styling

--- a/css/scss/partials/_theme.scss
+++ b/css/scss/partials/_theme.scss
@@ -43,3 +43,29 @@ a {
 		font-size: 40px;
 	}
 }
+
+.theme-response-holder {
+	width: 80%;
+	margin: auto;
+	border: 1px solid #000;
+	height: 50px;
+	margin-top: 30px;
+}
+
+.theme-response-inner {
+	width: 30%;
+	height: 50px;
+	background: $uq-green;
+
+}
+
+// This is for the buttons and time left lecture side 
+.theme-response-actions {
+	margin-top: 30px;
+	text-align: center;
+
+	h2 {
+		font-size: 30px;
+
+	}
+}
