--- a/css/main.css
+++ b/css/main.css
@@ -509,6 +509,14 @@ body {
   margin-top: 18px;
 }
 
+/* line 120, scss/partials/_typography.scss */
+.type-body-url {
+  font-size: 20px;
+  text-align: center;
+  color: black;
+  margin-top: 10px;
+}
+
 /* *******
 ** THEME SPECIFIC STYLING
 ** ******/
@@ -551,6 +559,32 @@ body {
   padding-top: 10px;
   font-weight: 800;
   font-size: 40px;
+}
+
+/* line 47, scss/partials/_theme.scss */
+.theme-response-holder {
+  width: 80%;
+  margin: auto;
+  border: 1px solid #000;
+  height: 50px;
+  margin-top: 30px;
+}
+
+/* line 55, scss/partials/_theme.scss */
+.theme-response-inner {
+  width: 30%;
+  height: 50px;
+  background: #16BF25;
+}
+
+/* line 63, scss/partials/_theme.scss */
+.theme-response-actions {
+  margin-top: 30px;
+  text-align: center;
+}
+/* line 67, scss/partials/_theme.scss */
+.theme-response-actions h2 {
+  font-size: 30px;
 }
 
 /* line 1, scss/partials/_list.scss */
@@ -608,22 +642,26 @@ body {
   font-size: 30px;
   padding-left: 20px;
 }
+/* line 66, scss/partials/_list.scss */
+.list-questions-green li button {
+  float: right;
+}
 
-/* line 67, scss/partials/_list.scss */
+/* line 71, scss/partials/_list.scss */
 .list-questions, .list-questions-purple {
   margin-top: 20px;
   width: 100%;
 }
-/* line 72, scss/partials/_list.scss */
+/* line 76, scss/partials/_list.scss */
 .list-questions ul, .list-questions-purple ul {
   max-width: 400px;
   margin: auto;
 }
-/* line 78, scss/partials/_list.scss */
+/* line 82, scss/partials/_list.scss */
 .list-questions ul li, .list-questions-purple ul li {
   margin-bottom: 10px;
 }
-/* line 82, scss/partials/_list.scss */
+/* line 86, scss/partials/_list.scss */
 .list-questions ul li div, .list-questions-purple ul li div {
   color: white;
   height: 30px;
@@ -632,30 +670,30 @@ body {
   transition: .3s;
   padding-left: 10px;
 }
-/* line 91, scss/partials/_list.scss */
+/* line 95, scss/partials/_list.scss */
 .list-questions h2, .list-questions-purple h2 {
   text-align: center;
   padding-top: 10px;
   font-weight: 800;
   font-size: 40px;
 }
-/* line 98, scss/partials/_list.scss */
+/* line 102, scss/partials/_list.scss */
 .list-questions h3, .list-questions-purple h3 {
   text-align: center;
   padding-top: 10px;
   font-weight: 500;
   padding-bottom: 10px;
 }
-/* line 105, scss/partials/_list.scss */
+/* line 109, scss/partials/_list.scss */
 .list-questions label, .list-questions-purple label {
   font-size: 20px;
 }
 
-/* line 114, scss/partials/_list.scss */
+/* line 118, scss/partials/_list.scss */
 .list-questions-purple ul li div {
   background: #3D3092;
 }
-/* line 118, scss/partials/_list.scss */
+/* line 122, scss/partials/_list.scss */
 .list-questions-purple ul li div:hover {
   background: #1d1745;
 }
