--- a/css/scss/partials/_typography.scss
+++ b/css/scss/partials/_typography.scss
@@ -116,3 +116,10 @@ body {
 	margin-left: 20px;
 	margin-top: 18px;
 }
+
+.type-body-url {
+	font-size: 20px;
+	text-align:center;
+	color: black;
+	margin-top: 10px;
+}
