--- a/css/scss/partials/_headers.scss
+++ b/css/scss/partials/_headers.scss
@@ -40,6 +40,8 @@ $header-height: 50px;
     height: 100px;
     width: 100%;
     background: $uq-purple;
+    padding-top: 20px;
+    padding-bottom: 20px;
 
     h3 {
         color: white;
