--- a/css/main.css
+++ b/css/main.css
@@ -89,16 +89,23 @@ table {
 .header-l-prepare {
   height: 50px;
   width: 100%;
+  background: #3D3092;
+}
+
+/* line 30, scss/partials/_headers.scss */
+.header-l-lecture {
+  height: 50px;
+  width: 100%;
   background: #16BF25;
 }
 
-/* line 39, scss/partials/_headers.scss */
+/* line 41, scss/partials/_headers.scss */
 .header-startpage {
   height: 173px;
   width: 100%;
   background: #3D3092;
 }
-/* line 44, scss/partials/_headers.scss */
+/* line 46, scss/partials/_headers.scss */
 .header-startpage h3 {
   color: white;
   text-align: center;
@@ -108,26 +115,12 @@ table {
   font-size: 1em;
 }
 
-/* line 56, scss/partials/_headers.scss */
-.header-l-subjects-header {
-  height: 50px;
-  width: 100%;
-  background: #16BF25;
-}
-
-/* line 62, scss/partials/_headers.scss */
+/* line 59, scss/partials/_headers.scss */
 .lecturer-startpage-header {
   height: 173px;
   width: 100%;
   background: white;
   margin-bottom: 20px;
-}
-
-/* line 69, scss/partials/_headers.scss */
-.header-l-prepare {
-  height: 50px;
-  width: 100%;
-  background: #16BF25;
 }
 
 /* *******
@@ -164,9 +157,9 @@ table {
 /* line 33, scss/partials/_buttons.scss */
 .button-add-subject {
   width: 100%;
-  border: 2px solid #16BF25;
+  border: 2px solid #3D3092;
   background-color: white;
-  color: #16BF25;
+  color: #3D3092;
   font-weight: 600;
   font-size: 20px;
   height: 42px;
@@ -176,12 +169,12 @@ table {
 /* line 44, scss/partials/_buttons.scss */
 .button-add-subject:hover {
   transition: 0.7s;
-  background-color: #16BF25;
+  background-color: #3D3092;
   color: white;
 }
 
 /* line 54, scss/partials/_buttons.scss */
-.button-switch {
+.button-goto-prepare {
   background-color: #3D3092;
   width: 150px;
   height: 100%;
@@ -191,22 +184,41 @@ table {
   text-align: center;
 }
 /* line 64, scss/partials/_buttons.scss */
-.button-switch p {
+.button-goto-prepare p {
   margin-top: 15px;
 }
 /* line 68, scss/partials/_buttons.scss */
-.button-switch:hover {
+.button-goto-prepare:hover {
   background-color: #2d236c;
 }
 
-/* line 75, scss/partials/_buttons.scss */
+/* line 73, scss/partials/_buttons.scss */
+.button-goto-lecture {
+  background-color: #16BF25;
+  width: 150px;
+  height: 100%;
+  display: inline-block;
+  float: right;
+  color: white;
+  text-align: center;
+}
+/* line 83, scss/partials/_buttons.scss */
+.button-goto-lecture p {
+  margin-top: 15px;
+}
+/* line 87, scss/partials/_buttons.scss */
+.button-goto-lecture:hover {
+  background-color: #11911c;
+}
+
+/* line 92, scss/partials/_buttons.scss */
 .drawing-app-submit {
   position: absolute;
   top: 10px;
   right: 10px;
 }
 
-/* line 85, scss/partials/_buttons.scss */
+/* line 102, scss/partials/_buttons.scss */
 .drawing-app-question {
   position: absolute;
   top: 10px;
@@ -328,14 +340,23 @@ input:focus {
 }
 
 /* line 1, scss/partials/_images.scss */
-.images-startpage-logo {
+.student-startpage-logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 400px;
+  padding-top: 30px;
+}
+
+/* line 9, scss/partials/_images.scss */
+.lecturer-startpage-logo {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 400px;
 }
 
-/* line 8, scss/partials/_images.scss */
+/* line 16, scss/partials/_images.scss */
 .images-l-subjects {
   display: inline-block;
   height: 30px;
@@ -366,16 +387,23 @@ input:focus {
 .header-l-prepare {
   height: 50px;
   width: 100%;
+  background: #3D3092;
+}
+
+/* line 30, scss/partials/_headers.scss */
+.header-l-lecture {
+  height: 50px;
+  width: 100%;
   background: #16BF25;
 }
 
-/* line 39, scss/partials/_headers.scss */
+/* line 41, scss/partials/_headers.scss */
 .header-startpage {
   height: 173px;
   width: 100%;
   background: #3D3092;
 }
-/* line 44, scss/partials/_headers.scss */
+/* line 46, scss/partials/_headers.scss */
 .header-startpage h3 {
   color: white;
   text-align: center;
@@ -385,26 +413,12 @@ input:focus {
   font-size: 1em;
 }
 
-/* line 56, scss/partials/_headers.scss */
-.header-l-subjects-header {
-  height: 50px;
-  width: 100%;
-  background: #16BF25;
-}
-
-/* line 62, scss/partials/_headers.scss */
+/* line 59, scss/partials/_headers.scss */
 .lecturer-startpage-header {
   height: 173px;
   width: 100%;
   background: white;
   margin-bottom: 20px;
-}
-
-/* line 69, scss/partials/_headers.scss */
-.header-l-prepare {
-  height: 50px;
-  width: 100%;
-  background: #16BF25;
 }
 
 /* *****
@@ -545,7 +559,14 @@ body {
   opacity: .8;
 }
 
-/* line 39, scss/partials/_theme.scss */
+/* line 37, scss/partials/_theme.scss */
+.bg {
+  background-image: url(../assets/images/bg.png);
+  background-repeat: none;
+  background-size: cover;
+}
+
+/* line 44, scss/partials/_theme.scss */
 .theme-question-purple h2 {
   text-align: center;
   padding-top: 10px;
@@ -556,11 +577,11 @@ body {
 /* line 1, scss/partials/_list.scss */
 .list-subjects, .list-subjects-purple, .list-subjects-green {
   margin-top: 20px;
-  width: 100%;
-  max-width: 400px;
+  width: 50%;
   margin: auto;
+  padding-top: 30px;
 }
-/* line 8, scss/partials/_list.scss */
+/* line 10, scss/partials/_list.scss */
 .list-subjects li, .list-subjects-purple li, .list-subjects-green li {
   color: white;
   text-align: center;
@@ -572,30 +593,44 @@ body {
   cursor: pointer;
 }
 
-/* line 25, scss/partials/_list.scss */
-.list-subjects-purple ul li {
+/* line 27, scss/partials/_list.scss */
+.list-subjects-purple li {
   background: #3D3092;
 }
-/* line 29, scss/partials/_list.scss */
-.list-subjects-purple ul li:hover {
+/* line 32, scss/partials/_list.scss */
+.list-subjects-purple li:hover {
   background: #1d1745;
 }
+/* line 35, scss/partials/_list.scss */
+.list-subjects-purple h3 {
+  text-align: center;
+  padding-bottom: 10px;
+}
 
-/* line 38, scss/partials/_list.scss */
+/* line 42, scss/partials/_list.scss */
+.list-subjects-green {
+  opacity: .7;
+}
+/* line 45, scss/partials/_list.scss */
 .list-subjects-green li {
   background: #16BF25;
 }
-/* line 42, scss/partials/_list.scss */
+/* line 49, scss/partials/_list.scss */
 .list-subjects-green li:hover {
   background: #0b6413;
 }
+/* line 52, scss/partials/_list.scss */
+.list-subjects-green h3 {
+  text-align: center;
+  padding-bottom: 10px;
+}
 
-/* line 47, scss/partials/_list.scss */
+/* line 58, scss/partials/_list.scss */
 .list-questions-green {
   width: 80%;
   margin: auto;
 }
-/* line 52, scss/partials/_list.scss */
+/* line 63, scss/partials/_list.scss */
 .list-questions-green li {
   margin-bottom: 10px;
   height: 50px;
@@ -609,21 +644,21 @@ body {
   padding-left: 20px;
 }
 
-/* line 67, scss/partials/_list.scss */
+/* line 78, scss/partials/_list.scss */
 .list-questions, .list-questions-purple {
   margin-top: 20px;
   width: 100%;
 }
-/* line 72, scss/partials/_list.scss */
+/* line 83, scss/partials/_list.scss */
 .list-questions ul, .list-questions-purple ul {
   max-width: 400px;
   margin: auto;
 }
-/* line 78, scss/partials/_list.scss */
+/* line 89, scss/partials/_list.scss */
 .list-questions ul li, .list-questions-purple ul li {
   margin-bottom: 10px;
 }
-/* line 82, scss/partials/_list.scss */
+/* line 93, scss/partials/_list.scss */
 .list-questions ul li div, .list-questions-purple ul li div {
   color: white;
   height: 30px;
@@ -632,30 +667,30 @@ body {
   transition: .3s;
   padding-left: 10px;
 }
-/* line 91, scss/partials/_list.scss */
+/* line 102, scss/partials/_list.scss */
 .list-questions h2, .list-questions-purple h2 {
   text-align: center;
   padding-top: 10px;
   font-weight: 800;
   font-size: 40px;
 }
-/* line 98, scss/partials/_list.scss */
+/* line 109, scss/partials/_list.scss */
 .list-questions h3, .list-questions-purple h3 {
   text-align: center;
   padding-top: 10px;
   font-weight: 500;
   padding-bottom: 10px;
 }
-/* line 105, scss/partials/_list.scss */
+/* line 116, scss/partials/_list.scss */
 .list-questions label, .list-questions-purple label {
   font-size: 20px;
 }
 
-/* line 114, scss/partials/_list.scss */
+/* line 125, scss/partials/_list.scss */
 .list-questions-purple ul li div {
   background: #3D3092;
 }
-/* line 118, scss/partials/_list.scss */
+/* line 129, scss/partials/_list.scss */
 .list-questions-purple ul li div:hover {
   background: #1d1745;
 }
