--- a/css/scss/partials/_images.scss
+++ b/css/scss/partials/_images.scss
@@ -1,4 +1,12 @@
-.images-startpage-logo {
+.student-startpage-logo {
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 400px;
+	padding-top:30px;
+}
+
+.lecturer-startpage-logo {
 	display: block;
     margin-left: auto;
     margin-right: auto;
