--- a/css/scss/partials/_theme.scss
+++ b/css/scss/partials/_theme.scss
@@ -34,6 +34,11 @@ a {
 	}
 }
 
+.bg{
+	background-image: url(../assets/images/bg.png);
+	background-repeat:none;
+	background-size:cover;
+}
 
 .theme-question-purple {
 	h2 {
