--- a/css/main.css
+++ b/css/main.css
@@ -101,13 +101,13 @@ table {
 
 /* line 41, scss/partials/_headers.scss */
 .header-startpage {
-  height: 100px;
+  height: 120px;
   width: 100%;
   background: #3D3092;
   padding-top: 20px;
   padding-bottom: 20px;
 }
-/* line 46, scss/partials/_headers.scss */
+/* line 48, scss/partials/_headers.scss */
 .header-startpage h3 {
   color: white;
   text-align: center;
@@ -117,34 +117,13 @@ table {
   font-size: 1em;
 }
 
-/* line 59, scss/partials/_headers.scss */
-<<<<<<< HEAD
-=======
-.header-l-subjects-header {
-  height: 50px;
-  width: 100%;
-  background: #16BF25;
-}
-
-/* line 65, scss/partials/_headers.scss */
->>>>>>> origin/master
+/* line 62, scss/partials/_headers.scss */
 .lecturer-startpage-header {
-  height: 173px;
+  height: 163px;
   width: 100%;
   background: white;
-  margin-bottom: 20px;
 }
 
-<<<<<<< HEAD
-=======
-/* line 72, scss/partials/_headers.scss */
-.header-l-prepare {
-  height: 50px;
-  width: 100%;
-  background: #16BF25;
-}
-
->>>>>>> origin/master
 /* *******
 ** BUTTONS 
 ** ******/
@@ -269,13 +248,13 @@ table {
 /* line 24, scss/partials/_canvas.scss */
 #app-bar .icon-select {
   display: inline-block;
-  margin-left: calc(100vw / 8);
+  margin-left: calc(100vw / 12);
   height: 70px;
   width: 90px;
 }
 /* line 31, scss/partials/_canvas.scss */
 #app-bar .selected {
-  background: #1d1745;
+  background: white;
 }
 
 /* line 1, scss/partials/_start_three_input.scss */
@@ -367,7 +346,6 @@ input:focus {
   margin-left: auto;
   margin-right: auto;
   width: 400px;
-  padding-top: 30px;
 }
 
 /* line 9, scss/partials/_images.scss */
@@ -375,7 +353,7 @@ input:focus {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 300px;
+  width: 400px;
 }
 
 /* line 16, scss/partials/_images.scss */
@@ -421,13 +399,13 @@ input:focus {
 
 /* line 41, scss/partials/_headers.scss */
 .header-startpage {
-  height: 100px;
+  height: 120px;
   width: 100%;
   background: #3D3092;
   padding-top: 20px;
   padding-bottom: 20px;
 }
-/* line 46, scss/partials/_headers.scss */
+/* line 48, scss/partials/_headers.scss */
 .header-startpage h3 {
   color: white;
   text-align: center;
@@ -437,34 +415,13 @@ input:focus {
   font-size: 1em;
 }
 
-/* line 59, scss/partials/_headers.scss */
-<<<<<<< HEAD
-=======
-.header-l-subjects-header {
-  height: 50px;
-  width: 100%;
-  background: #16BF25;
-}
-
-/* line 65, scss/partials/_headers.scss */
->>>>>>> origin/master
+/* line 62, scss/partials/_headers.scss */
 .lecturer-startpage-header {
-  height: 173px;
+  height: 163px;
   width: 100%;
   background: white;
-  margin-bottom: 20px;
 }
 
-<<<<<<< HEAD
-=======
-/* line 72, scss/partials/_headers.scss */
-.header-l-prepare {
-  height: 50px;
-  width: 100%;
-  background: #16BF25;
-}
-
->>>>>>> origin/master
 /* *****
 ** Font Family
 * *****/
@@ -583,7 +540,7 @@ body {
   background-image: url(../assets/images/lecture-mode-bg.png);
   background-repeat: no-repeat;
   background-size: cover;
-  height: calc(100vh - 173px);
+  height: calc(100vh - 163px);
   cursor: pointer;
   transition: .5s;
 }
@@ -602,7 +559,7 @@ body {
   background-image: url(../assets/images/prepare-mode-bg.png);
   background-repeat: no-repeat;
   background-size: cover;
-  height: calc(100vh - 173px);
+  height: calc(100vh - 163px);
   cursor: pointer;
   transition: .3s;
 }
@@ -626,7 +583,7 @@ body {
   font-size: 40px;
 }
 
-/* line 47, scss/partials/_theme.scss */
+/* line 52, scss/partials/_theme.scss */
 .theme-response-holder {
   width: 80%;
   margin: auto;
@@ -635,19 +592,19 @@ body {
   margin-top: 30px;
 }
 
-/* line 55, scss/partials/_theme.scss */
+/* line 60, scss/partials/_theme.scss */
 .theme-response-inner {
   width: 30%;
   height: 50px;
   background: #16BF25;
 }
 
-/* line 63, scss/partials/_theme.scss */
+/* line 68, scss/partials/_theme.scss */
 .theme-response-actions {
   margin-top: 30px;
   text-align: center;
 }
-/* line 67, scss/partials/_theme.scss */
+/* line 72, scss/partials/_theme.scss */
 .theme-response-actions h2 {
   font-size: 30px;
 }
@@ -721,42 +678,26 @@ body {
   font-size: 30px;
   padding-left: 20px;
 }
-/* line 66, scss/partials/_list.scss */
+/* line 77, scss/partials/_list.scss */
 .list-questions-green li button {
   float: right;
 }
 
-<<<<<<< HEAD
-/* line 78, scss/partials/_list.scss */
-=======
-/* line 71, scss/partials/_list.scss */
->>>>>>> origin/master
+/* line 82, scss/partials/_list.scss */
 .list-questions, .list-questions-purple {
   margin-top: 20px;
   width: 100%;
 }
-<<<<<<< HEAD
-/* line 83, scss/partials/_list.scss */
-=======
-/* line 76, scss/partials/_list.scss */
->>>>>>> origin/master
+/* line 87, scss/partials/_list.scss */
 .list-questions ul, .list-questions-purple ul {
   max-width: 400px;
   margin: auto;
 }
-<<<<<<< HEAD
-/* line 89, scss/partials/_list.scss */
-.list-questions ul li, .list-questions-purple ul li {
-  margin-bottom: 10px;
-}
 /* line 93, scss/partials/_list.scss */
-=======
-/* line 82, scss/partials/_list.scss */
 .list-questions ul li, .list-questions-purple ul li {
   margin-bottom: 10px;
 }
-/* line 86, scss/partials/_list.scss */
->>>>>>> origin/master
+/* line 97, scss/partials/_list.scss */
 .list-questions ul li div, .list-questions-purple ul li div {
   color: white;
   height: 30px;
@@ -765,50 +706,30 @@ body {
   transition: .3s;
   padding-left: 10px;
 }
-<<<<<<< HEAD
-/* line 102, scss/partials/_list.scss */
-=======
-/* line 95, scss/partials/_list.scss */
->>>>>>> origin/master
+/* line 106, scss/partials/_list.scss */
 .list-questions h2, .list-questions-purple h2 {
   text-align: center;
   padding-top: 10px;
   font-weight: 800;
   font-size: 40px;
 }
-<<<<<<< HEAD
-/* line 109, scss/partials/_list.scss */
-=======
-/* line 102, scss/partials/_list.scss */
->>>>>>> origin/master
+/* line 113, scss/partials/_list.scss */
 .list-questions h3, .list-questions-purple h3 {
   text-align: center;
   padding-top: 10px;
   font-weight: 500;
   padding-bottom: 10px;
 }
-<<<<<<< HEAD
-/* line 116, scss/partials/_list.scss */
-=======
-/* line 109, scss/partials/_list.scss */
->>>>>>> origin/master
+/* line 120, scss/partials/_list.scss */
 .list-questions label, .list-questions-purple label {
   font-size: 20px;
 }
 
-<<<<<<< HEAD
-/* line 125, scss/partials/_list.scss */
-.list-questions-purple ul li div {
-  background: #3D3092;
-}
 /* line 129, scss/partials/_list.scss */
-=======
-/* line 118, scss/partials/_list.scss */
 .list-questions-purple ul li div {
   background: #3D3092;
 }
-/* line 122, scss/partials/_list.scss */
->>>>>>> origin/master
+/* line 133, scss/partials/_list.scss */
 .list-questions-purple ul li div:hover {
   background: #1d1745;
 }
