--- a/css/scss/partials/_headers.scss
+++ b/css/scss/partials/_headers.scss
@@ -44,6 +44,7 @@ $header-height: 50px;
     background: $uq-purple;
     padding-top: 20px;
     padding-bottom: 20px;
+		box-shadow: 0px 1px 5px #000;
 
     h3 {
         color: white;
@@ -62,6 +63,6 @@ $header-height: 50px;
 .lecturer-startpage-header {
 	height: 163px;
     width: 100%;
-    background: white;
+    background: #e9e9e9;
 }
 
