Added view responses page
style for the grid is added in list.scss

--- a/css/scss/partials/_list.scss
+++ b/css/scss/partials/_list.scss
@@ -137,3 +137,23 @@
 
 
 }
+
+//style for response page grid layout
+.grid-container {
+	margin: 0 auto;
+	width: 1200px;
+	padding-top: 20px;
+}
+//style for single grid block
+.grid-response {
+	float: left;
+	width: 110px;
+	height: 110px;
+	overflow: hidden;
+	padding: 0px;
+	margin: 5px;
+	border-radius: 25px;
+    border: 4px solid;
+    border-color: $uq-purple;
+    
+}
