--- a/css/main.css
+++ b/css/main.css
@@ -578,6 +578,15 @@ body {
   margin-top: 10px;
 }
 
+/* line 127, scss/partials/_typography.scss */
+.type-body-response {
+  font-size: 20px;
+  text-align: left;
+  color: black;
+  margin-top: 50px;
+  margin-left: 50px;
+}
+
 /* *******
 ** THEME SPECIFIC STYLING
 ** ******/
@@ -778,6 +787,26 @@ body {
 /* line 133, scss/partials/_list.scss */
 .list-questions-purple ul li div:hover {
   background: #1d1745;
+}
+
+/* line 142, scss/partials/_list.scss */
+.grid-container {
+  margin: 0 auto;
+  width: 1200px;
+  padding-top: 20px;
+}
+
+/* line 148, scss/partials/_list.scss */
+.grid-response {
+  float: left;
+  width: 110px;
+  height: 110px;
+  overflow: hidden;
+  padding: 0px;
+  margin: 5px;
+  border-radius: 25px;
+  border: 4px solid;
+  border-color: #3D3092;
 }
 
 /*
