--- a/css/scss/partials/_typography.scss
+++ b/css/scss/partials/_typography.scss
@@ -123,3 +123,11 @@ body {
 	color: black;
 	margin-top: 10px;
 }
+
+.type-body-response {
+	font-size: 20px;
+	text-align:left;
+	color: black;
+	margin-top: 50px;
+	margin-left: 50px;
+}
