--- a/css/scss/partials/_images.scss
+++ b/css/scss/partials/_images.scss
@@ -19,3 +19,9 @@
     padding-top: 10px;
     float: left;
 }
+
+.single-response {
+    z-index: -1;
+    position: absolute;
+    border-radius: 20px;
+}
